--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     breakpoint: 'ads'
                 });
             });
+            googletag.pubads().enableSingleRequest();
             googletag.enableServices();
             harm.show.breakpoint('ads');
         });
